themes/default/css/global.css
/* ... */
footer .su-form *, footer .special-page-type-form * {
	vertical-align: middle;
}

footer .special-page-type-form select, footer .special-page-type-form select option.label {
	color: {$GET,unfilled_input_text};
}

footer .special-page-type-form select option {
	color: {$GET,native_ui_foreground};
}

/*{+START,CSS_MODE,desktop}*/
	footer .global-footer-left .horizontal-buttons, footer .su-form, footer .special-page-type-form {
		float: left;
		padding-right: 14px;
	}
/*{+END}*/
footer .global-footer-left .horizontal-buttons {
	margin-top: 5px;
}
footer .su-form, footer .special-page-type-form {
	margin-top: 6px;
}

footer .global-footer-left img {
	vertical-align: middle;
}

footer .global-footer-left #special-page-type {
	width: 16em;
}

footer .global-footer-right {
}

footer .invisible-ref-point {
	position: absolute;
	width: 0;
}

/*{+START,CSS_MODE,desktop}*/
	footer .global-copyright {
		text-align: right;
	}
/*{+END}*/
/*{+START,CSS_MODE,mobile}*/
	footer .global-copyright {
		padding: 0.5em 0;
	}
/*{+END}*/

footer .global-minilinks {
	padding-bottom: 0.3em;
}
/*{+START,CSS_MODE,desktop}*/
	footer .global-minilinks {
		text-align: center;
	}
/*{+END}*/

footer .global-minilinks .footer-links {
	width: auto;
	margin: 0;
	padding: 0;
	list-style-type: none;
}

/*{+START,CSS_MODE,desktop}*/
	.footer-links > li::before {
		padding: 0 0.5em 0 0.1em;
		content: "\00b7" !important; /* a &middot; */
	}

	.footer-links li:first-child::before {
		/* Undoes the middot/comma separator */
		content: "" !important;
		padding-left: 0 !important;
		padding-right: 0 !important;
	}

	.footer-links > li {
		display: inline;
		margin: 0;
		padding: 0;
	}
/*{+END}*/
/*{+START,CSS_MODE,mobile}*/
   footer .global-minilinks {
		padding-top: 1em;
	}

	footer .global-minilinks .footer-links li {
		min-width: 7em;
		margin-right: 1em;
		display: inline-block;
		list-style-type: none;
		padding: 0.25em 0 0.25em 18px;
	}

	footer .global-minilinks .footer-links li::before {
		font-family: sans-serif;
		color: {$GET,seed};
		content: '\025BA'; /* Rightward triangle */
		vertical-align: middle;
		padding-right: 1em;
		display: inline-block;
		transform: scale(0.5, 1);
	}

   footer .global-copyright {
		text-align: center;
	}
/*{+END}*/

/*
=========================
==With Special Meanings==
=========================
*/

.webstandards-checker-off { /* Membership of this class is used as a tag to turn off the webstandards checker */
	display: inline-block; /* To stop it breaking text-align: center */
	width: 100%;
}

.textarea-scroll { /* Turns off word-wrapping for a textarea: this has to be done using JavaScript so that the invalid 'wrap' property isn't written into the XHTML */
}

.leave-native-tooltip { /* No automatic tooltips on this element */
}

body .accessibility-hidden { /* Contents should be made visible (or interpreted) for accessibly representation but hidden for normal visual display */
	/* Shift it out of the viewport */
	position: absolute;
	top: -256000px;
	left: 0;
	opacity: 0; /* So browser doesn't waste resources rendering (cannot use visibility, Mac Voiceover will not pick up on it) */
	display: block; /* stops browser bugs where it interacts with the layout flow incorrectly */
}
.email-body .accessibility-hidden { /* E-mail CSS may be less sophisticated */
	display: none;
}

.sr-only {
	position: absolute;
	width: 1px;
	height: 1px;
	padding: 0;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	white-space: nowrap;
	border: 0;
}

.sr-only-focusable:active,
.sr-only-focusable:focus {
	position: static;
	width: auto;
	height: auto;
	overflow: visible;
	clip: auto;
	white-space: normal;
}

/*{+START,CSS_MODE,mobile}*/
	.non-accessibility-redundancy { /* Contents should be skipped by screen-readers */
		display: none;
	}
/*{+END}*/

/*
=========================
=====Reusable Styles=====
=========================
*/

/* All floats within this will be contained to it */
.float-surrounder {
	overflow: hidden;
}

.clearfix::after {
	display: block;
	clear: both;
	content: "";
}

/* Commonly used to indicate there is no content to display */
.nothing-here, .more-here {
	margin: 1.5em 0;
}

.nothing-here::before,
.more-here::before {
	font-family: sans-serif;
	color: {$GET,seed};
	content: '\025BA'; /* Rightward triangle */
	vertical-align: middle;
	padding-right: 1em;
	display: inline-block;
	transform: scale(0.5, 1);
}

/* Used for styling the 'last edited' information */
.edited {
	font-size: 0.85em;
	font-style: italic;
}
/*{+START,CSS_MODE,desktop}*/
	.edited {
		padding-left: 1em;
	}
/*{+END}*/
/*{+START,CSS_MODE,mobile}*/
	.edited {
		padding-left: 0.7em;
	}
/*{+END}*/
div.edited {
	margin: 2em 0;
}
.edited > * {
	vertical-align: middle;
}

/* Usage guide: Use on the immediate surrounding element, and make sure that there is no loose text inside (put that in a span) */
.vertical-alignment, .vertical-alignment > * {
	vertical-align: middle !important;
}

/* Used to align inline images to the top of the rendering context */
.top-vertical-alignment, .top-vertical-alignment * {
	vertical-align: top;
}

/* Used to align a back to top image beside screen item buttons */
.back-to-top-by-buttons {
	padding-top: 4px;
}

/* Used to align next to a floated button(s) */
.vertical-alignment-buttons {
	line-height: 1.9em;
}


/* Makes an item of media (e.g. an image) get framed nicely. NB: We do not use this for galleries (which are more elaborate), although that has similar styling with .gallery-grid-cell */
.media-box {
	text-align: center;
}
/*{+START,CSS_MODE,desktop}*/
	.media-box {
		margin: 1.5em 0;
	}
/*{+END}*/
/*{+START,CSS_MODE,mobile}*/
	.media-box {
		margin: 1em 0;
	}
/*{+END}*/
.media-box a {
	outline: 0;
}
.media-box > a > img,
.media-box > img {
	border: 1px solid {$GET,standard_border};
	box-shadow: 3px 3px 10px {$GET,standard_border};
}
/* ... */

